# atlite

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  RELEASE_NOTES.rst  REUSE.toml  codecov.yml  environment.yaml  environment_docs.yaml  pyproject.toml  run_wind_cutout.sh  setup.cfg  setup.py  vm_setup.sh  wind_cf.py  wind_cutout.py  wind_vm.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: CI.yaml  REUSE.yml  codeql.yml  deploy.yml  draft-pdf.yml  release.yml  test.yaml
.reuse/: dep5
LICENSES/: BSD-2-Clause.txt  MIT.txt
atlite/: .atlite.default.config.yaml  README.md  __init__.py  _types.py  _version.py  aggregate.py  config.cerra.yaml  config.default.yaml  config.example.yaml  config.py  convert.py  cordex.py  csp.py  cutout.py  data.py  default.config.yaml  gis.py  hydro.py  ncep.py  preparation.py  projection.py  resource.py  shapes.py  streaming.py  utils.py  wind.py
atlite/datasets/: __init__.py  cerra.py  cmip.py  cmip.yml  common.py  cordex.py  cosmo_rea6.py  efas.py  era5.py  gebco.py  glofas.py  icon.py  icon_d2.py  icon_eu.py  meteo_forecast.py  meteo_historic.py  meteo_historic_forecast.py  mrel_wave.py  ncep.py  sarah.py
atlite/pv/: __init__.py  irradiation.py  orientation.py  solar_panel_model.py  solar_position.py
atlite/resources/cspinstallation/: SAM_parabolic-trough.csv  SAM_parabolic_trough.yaml  SAM_solar_tower.csv  SAM_solar_tower.yaml  lossless_installation.yaml
atlite/resources/solarpanel/: CSi.yaml  CdTe.yaml  KANENA.yaml  cSi.yaml
atlite/resources/waveenergyconverter/: Farshore_750kW.yaml  Nearshore_400kW.yaml  Shallow_290kW.yaml
atlite/resources/wec/: test_wec-1d.yaml  test_wec-2d.yaml
atlite/resources/wecgenerator/: Farshore_750kW.yaml  Nearshore_1000kW.yaml  Shallow_600kW.yaml
atlite/resources/windturbine/: 2016CACost_NREL_Reference_10MW_205_offshore.yaml  2016CACost_NREL_Reference_6MW_155_offshore.yaml  2016CACost_NREL_Reference_8MW_180_offshore.yaml  2017COE_Market_Average_2.3MW_113.yaml  2018COE_Market_Average_2.4MW_116.yaml  2019COE_Market_Average_2.6MW_121.yaml  2019ORCost_NREL_Reference_12MW_222_offshore.yaml  2019ORCost_NREL_Reference_15MW_248_offshore.yaml  2020ATB_NREL_Reference_12MW_214_offshore.yaml  2020ATB_NREL_Reference_15MW_240_offshore.yaml  2020ATB_NREL_Reference_18MW_263_offshore.yaml  2020ATB_NREL_Reference_4MW_150.yaml  2020ATB_NREL_Reference_5.5MW_175.yaml  2020ATB_NREL_Reference_7MW_200.yaml  BAR_BAU-LBNL-IEA_3.3MW_156.yaml  BAR_BAU_LowSP_3.25MW_166.yaml  BAR_BAUa_5.0MW_167.4.yaml  BAR_HighSP_5.0MW_134.9.yaml  BAR_LowSP_4.5MW_194.yaml  BAR_LowSP_6.5MW_234.yaml  Bonus_B1000_1000kW.yaml  DOE_GE_1.5MW_77.yaml  DTU_10MW_178_RWT_v1_offshore.yaml  Enercon_E101_3000kW.yaml  Enercon_E126_7500kW.yaml  Enercon_E82_3000kW.yaml  IEA_10MW_198_RWT_offshore.yaml  IEA_15MW_240_RWT_offshore.yaml  IEA_3.4MW_130_RWT.yaml  LEANWIND_8MW_164_RWT_offshore.yaml  NREL_5MW_126_RWT_offshore.yaml  NREL_ReferenceTurbine_2016CACost_10MW_offshore.yaml  NREL_ReferenceTurbine_2016CACost_6MW_offshore.yaml  NREL_ReferenceTurbine_2016CACost_8MW_offshore.yaml  NREL_ReferenceTurbine_2019ORCost_12MW.yaml  NREL_ReferenceTurbine_2019ORCost_12MW_offshore.yaml  NREL_ReferenceTurbine_2019ORCost_15MW_offshore.yaml  NREL_ReferenceTurbine_2020ATB_12MW.yaml  NREL_ReferenceTurbine_2020ATB_12MW_offshore.yaml  NREL_ReferenceTurbine_2020ATB_15MW.yaml  (+27 more)
doc/: Makefile  basics.rst  chart.py  conf.py  configuration.rst  contributing.rst  conventions.rst  design.rst  environment.yaml  examples.rst  getting-started.rst  index.rst  installation.rst  introduction.rst  license.rst  make.bat  ref_api.rst  release_notes.rst  support.rst  ug_capacityfactors.rst  ug_cutout.rst  ug_timeseries.rst  workflow_chart.odp
doc/_static/: theme_overrides.css
doc/examples/: building_stock_weather_aggregation.nblink  create_cutout.nblink  create_cutout_SARAH.nblink  finnish_building_stock_weather_aggregation.nblink  historic-comparison-germany.nblink  landuse-availability.nblink  logfiles_and_messages.nblink  more_examples.rst  plotting_with_atlite.nblink  solarpv_tracking_options.nblink  using_gebco_heightmap.nblink  working-with-csp.nblink
doc/img/: general-structure.dia
examples/: build_city_heat_demand.py  build_european_heat_demand.py  building_stock_weather_aggregation.ipynb  building_stock_weather_aggregation.ipynb.license  cmip_interface_example.ipynb  comparison_v1_v2.py  create_cutout.ipynb  create_cutout.py  create_cutout_ECHOWAVE.ipynb  create_cutout_SARAH.ipynb  finnish_building_stock_weather_aggregation.ipynb  finnish_building_stock_weather_aggregation.ipynb.license  historic-comparison-germany.ipynb  historic-comparison-germany.ipynb.license  landuse-availability.ipynb  logfiles_and_messages.ipynb  plotting_with_atlite.ipynb  plotting_with_atlite.ipynb.license  solarpv_tracking_options.ipynb  solarpv_tracking_options.ipynb.license  using_gebco_heightmap.ipynb  using_gebco_heightmap.ipynb.license  working-with-csp.ipynb  working-with-csp.ipynb.license
paper/: paper.bib  paper.md
paper/figures/: availability-matrix.png.license
paper/scripts/: cutout-figures.py  land-use.py  test-cdsapi.py
test/: conftest.py  raster.tif  test_aggregate_time.py  test_creation.py  test_cutout_creation.py  test_cutout_creation_and_conversion.py  test_cutout_preparation.py  test_dynamic_line_rating.py  test_gis.py  test_preparation_and_conversion.py  test_resource.py
