# SPDX-FileCopyrightText: Contributors to atlite <https://github.com/pypsa/atlite>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "atlite"
dynamic = ["version"]
description = "Library for fetching and converting weather data to power systems data"
readme = "README.rst"
authors=[{name = "Contributors to atlite", email = "jonas.hoersch@posteo.de"}]
license = { file = "LICENSE" }
classifiers=[
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",

]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions",
    "numpy",
    "scipy",
    "pandas>=0.25",
    "bottleneck",
    "numexpr",
    "xarray>=2024.03.0",
    "netcdf4",
    "dask>=2021.10.0",
    "toolz",
    "requests",
    "pyyaml",
    "rasterio!=1.4.0,!=1.4.1",
    "shapely",
    "progressbar2",
    "tqdm",
    "pyproj>=2",
    "geopandas>=0.10.0",
    "cdsapi>=0.7.4",
    "cfgrib>=0.9.15.0",
    "h5netcdf>=1.6.1",
]

[project.urls]
Homepage = "https://github.com/PyPSA/atlite"
Source = "https://github.com/PyPSA/atlite"
Documentation = "https://atlite.readthedocs.io/en/latest/"

[project.optional-dependencies]

dev = ["pre-commit", "pytest", "pytest-cov", "matplotlib", "ruff", "mypy", "types-PyYAML"]

docs = [
    "numpydoc==1.8.0",
    "sphinx==8.0.2",
    "sphinx-book-theme==1.1.3",
    "nbsphinx==0.9.5",
    "nbsphinx-link==1.3.0",
    "docutils==0.20",           # Just temporarily until sphinx-docutils is updated (see https://github.com/sphinx-doc/sphinx/issues/12340)
]

# Setuptools_scm settings

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.setuptools.packages.find]
include = ["atlite"]

# Formatter and linter settings

[tool.ruff]
extend-include = ['*.ipynb']
preview = true

[tool.ruff.lint]
select = [
    'F',      # pyflakes
    'E',      # pycodestyle: Error
    'W',      # pycodestyle: Warning
    'I',      # isort
    'D',      # pydocstyle
    'UP',     # pyupgrade
    'TID',    # flake8-tidy-imports
    'B',      # flake8-bugbear
    'SIM',    # flake8-simplify
    'RET',    # flake8-return
    'C4',     # flake8-comprehensions
    'TC',     # flake8-type-checking
    'NPY',    # numpy
    'G',      # flake8-logging-format
    'PTH',    # flake8-use-pathlib
    'DOC',    # pydoclint: docstring-signature alignment
    'RUF013', # ruff: implicit-optional
    'RUF100', # ruff: unused-noqa
]

ignore = [
    'E501', # line too long
    'E741', # ambiguous variable names
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["D101", "D102", "D103", "D205"]
"examples/**" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_incomplete_defs = true
check_untyped_defs = true
exclude = [".venv/", "build/"]
